frontend/security_groups.tf
resource "aws_security_group" "zulip_alb" {
  name        = "zulip-alb-sg"
  description = "zulip loadbalancer sg"
  vpc_id      = local.vpc_id
}

resource "aws_security_group_rule" "allow_https" {
  type              = "ingress"
  description       = "HTTPS ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.zulip_alb.id
}

resource "aws_security_group_rule" "allow_http" {
  type              = "ingress"
  description       = "HTTP ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.zulip_alb.id
}

resource "aws_security_group_rule" "allow_all_outbound" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.zulip_alb.id
}


resource "aws_security_group" "zulip_instance" {
  name        = "zulip-ec2-instance-sg"
  description = "zulip ec2 instance sg"
  vpc_id      = local.vpc_id
}

resource "aws_security_group_rule" "zulip_instance_allow_ssh" {
  type              = "ingress"
  description       = "HTTP ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["10.0.0.0/8", "192.168.0.0/16"]
  security_group_id = aws_security_group.zulip_instance.id
}

resource "aws_security_group_rule" "zulip_instance_allow_https" {
  type              = "ingress"
  description       = "HTTPS ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.zulip_instance.id
}

resource "aws_security_group_rule" "zulip_instance_allow_smtp" {
  type              = "ingress"
  description       = "smtp ingress"
  from_port         = 25
  to_port           = 25
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.zulip_instance.id
}

resource "aws_security_group_rule" "zulip_instance_allow_http" {
  type              = "ingress"
  description       = "HTTP ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.zulip_instance.id
}

resource "aws_security_group_rule" "zulip_instance_allow_all_outbound" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.zulip_instance.id
}
